[gd_scene load_steps=20 format=3 uid="uid://d1akrfq4ihlyy"]

[ext_resource type="Script" path="res://scripts/level_5.gd" id="1_rq4vx"]
[ext_resource type="PackedScene" uid="uid://bkpuw7t2myv2b" path="res://scenes/tile_map.tscn" id="2_oh2tl"]
[ext_resource type="PackedScene" uid="uid://dl5ayp7fe1v6b" path="res://scenes/player.tscn" id="3_d3m2k"]
[ext_resource type="PackedScene" uid="uid://cpxe4vse68eos" path="res://scenes/goblin.tscn" id="4_uompy"]
[ext_resource type="Texture2D" uid="uid://djk840sorg5ub" path="res://mystic_woods_free_2.1 use/sprites/objects/chest_01.png" id="5_vxvdq"]
[ext_resource type="Texture2D" uid="uid://dpux8xh3d6ujb" path="res://FREE RPG Icon Pack - 100+ Accessories and Armor - Clockwork Raven Studios/icons64x64.png" id="6_xkvvx"]
[ext_resource type="PackedScene" uid="uid://bj2kfy31qak10" path="res://scenes/hud.tscn" id="7_6brys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ypm6b"]
radius = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fhboa"]
atlas = ExtResource("5_vxvdq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpevg"]
atlas = ExtResource("5_vxvdq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae7mk"]
atlas = ExtResource("5_vxvdq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f86id"]
atlas = ExtResource("5_vxvdq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a65kc"]
atlas = ExtResource("5_vxvdq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gh6q8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhboa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpevg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae7mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f86id")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a65kc")
}],
"loop": true,
"name": &"end",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oloxn"]
atlas = ExtResource("6_xkvvx")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dwfpm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oloxn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_shgqb"]
radius = 34.9277

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obeey"]
size = Vector2(101.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4v4pi"]
size = Vector2(14, 13)

[node name="level_6" type="Node2D"]
script = ExtResource("1_rq4vx")

[node name="TileMap" parent="." instance=ExtResource("2_oh2tl")]
layer_0/tile_data = PackedInt32Array(65535, 1, 0, 65534, 1, 0, 131070, 1, 0, 131071, 1, 0, 196607, 1, 0, 196606, 1, 0, 262142, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 720895, 1, 0, 786431, 1, 0, 851967, 1, 0, 917503, 1, 0, 983039, 1, 0, 1048575, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 65536, 1, 1048586, 131072, 1, 1048587, 131072, 1, 1048588, 131072, 1, 1048589, 131072, 1, 1048590, 131072, 1, 1048591, 262144, 0, 1048592, 131072, 2, 1048593, 131072, 2, 983057, 131072, 1, 983058, 131072, 1, 917522, 131072, 1, 851986, 131072, 1, 786450, 131072, 1, 720914, 131072, 1, 655378, 131072, 1, 589842, 131072, 1, 524306, 131072, 1, 458770, 131072, 1, 393234, 131072, 1, 327698, 131072, 1, 262162, 131072, 1, 262163, 131072, 1, 196627, 131072, 1, 131091, 131072, 1, 131090, 131072, 1, 65554, 131072, 0, 65553, 131072, 0, 17, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, -65522, 1, 0, -65523, 1, 0, -65524, 1, 0, -65525, 1, 0, -65526, 1, 0, -65527, 1, 0, -65528, 1, 0, -65529, 1, 0, -65530, 1, 0, -65531, 1, 0, -65532, 1, 0, -65533, 1, 0, -65534, 1, 0, -65535, 1, 0, -65536, 1, 0, -1, 1, 0, -2, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, 19, 1, 0, 65555, 131072, 0, -65517, 1, 0, 18, 1, 0, 327699, 131072, 1, 393235, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 589843, 131072, 1, 655379, 131072, 1, 720915, 131072, 1, 786451, 131072, 1, 851987, 131072, 1, 917523, 131072, 1, 983059, 131072, 1, 1048595, 131072, 2, 1048594, 131072, 2, 196626, 131072, 1, 917520, 131072, 1, 983056, 131072, 1, 983055, 131072, 1, 983054, 131072, 1, 983053, 131072, 1, 983052, 131072, 1, 983051, 131072, 1, 983050, 131072, 1, 983049, 65536, 1, 983048, 1, 0, 983047, 1, 0, 983046, 1, 0, 983045, 1, 0, 983044, 1, 0, 983043, 1, 0, 983042, 1, 0, 983041, 1, 0, 983040, 1, 0, 917505, 1, 0, 917504, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 1, 0, 655358, 1, 0, 720894, 1, 0, 786430, 1, 0, 851966, 1, 0, 917502, 1, 0, 983038, 1, 0, 1048574, 1, 0, 1114110, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 1, 0, 327705, 1, 0, 393241, 1, 0, 458777, 1, 0, 524313, 1, 0, 589849, 1, 0, 655385, 1, 0, 720921, 1, 0, 786457, 1, 0, 851993, 1, 0, 917529, 1, 0, 983065, 1, 0, 1048601, 1, 0, 1114137, 1, 0, 1179646, 1, 0, 1245182, 1, 0, 1179655, 1, 0, 1179654, 1, 0, 1179653, 1, 0, 1179652, 1, 0, 1179651, 1, 0, 1179650, 1, 0, 1179649, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1245183, 1, 0, 1179648, 1, 0, 1179656, 1, 0, 1179657, 65536, 1, 1179658, 131072, 1, 1179659, 131072, 1, 1179660, 131072, 1, 1179661, 131072, 1, 1179662, 131072, 1, 1179663, 196608, 1, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114112, 1, 0, 1179647, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 65536, 1, 1114122, 131072, 1, 1114123, 131072, 1, 1114124, 131072, 1, 1114125, 131072, 1, 1114126, 131072, 1, 1114127, 196608, 1, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1048600, 1, 0, 983064, 1, 0, 917528, 1, 0, 851992, 1, 0, 786456, 1, 0, 720920, 1, 0, 655384, 1, 0, 589848, 1, 0, 524312, 1, 0, 458776, 1, 0, 393240, 1, 0, 327704, 1, 0, 262168, 1, 0, 196632, 1, 0, 131096, 1, 0, 65560, 1, 0, 24, 1, 0, 786447, 131072, 0, 720911, 1, 0, 655375, 1, 0, 589839, 1, 0, 524303, 1, 0, 458767, 1, 0, 393231, 1, 0, 327695, 131072, 2, 262159, 131072, 1, 196623, 131072, 1, 131087, 131072, 1, 65551, 131072, 0, 65550, 131072, 0, 65549, 131072, 0, 13, 1, 0, 12, 1, 0, 11, 1, 0, 65547, 131072, 0, 65546, 131072, 0, 65545, 131072, 0, 65544, 131072, 0, 65543, 131072, 0, 65542, 131072, 0, 65541, 131072, 0, 65540, 131072, 0, 4, 1, 0, 3, 1, 0, 2, 1, 0, 1, 1, 0, 65537, 65536, 0, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 65536, 2, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 851970, 1, 0, 786434, 1, 0, 720898, 1, 0, 655362, 1, 0, 589826, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 1, 0, 327682, 131072, 2, 262146, 131072, 1, 196610, 131072, 1, 131074, 131072, 1, 65538, 131072, 0, 65539, 131072, 0, 131075, 131072, 1, 196611, 131072, 1, 262147, 131072, 1, 327683, 131072, 2, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 917507, 1, 0, 917506, 1, 0, 917508, 1, 0, 851972, 1, 0, 786436, 1, 0, 720900, 1, 0, 655364, 1, 0, 589828, 1, 0, 524292, 1, 0, 458756, 1, 0, 393220, 1, 0, 327684, 131072, 2, 262148, 131072, 1, 196612, 131072, 1, 131076, 131072, 1, 131077, 131072, 1, 196613, 131072, 1, 262149, 131072, 1, 327685, 131072, 2, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 851973, 1, 0, 917509, 1, 0, 917510, 1, 0, 851974, 1, 0, 786438, 1, 0, 720902, 1, 0, 655366, 1, 0, 589830, 1, 0, 524294, 1, 0, 458758, 1, 0, 393222, 1, 0, 327686, 131072, 2, 262150, 131072, 1, 196614, 131072, 1, 131078, 131072, 1, 131079, 131072, 1, 196615, 131072, 1, 262151, 131072, 1, 327687, 131072, 2, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 917511, 1, 0, 917512, 1, 0, 851976, 1, 0, 786440, 1, 0, 720904, 1, 0, 655368, 1, 0, 589832, 1, 0, 524296, 1, 0, 458760, 1, 0, 393224, 1, 0, 327688, 131072, 2, 262152, 131072, 1, 196616, 131072, 1, 131080, 131072, 1, 131081, 131072, 1, 196617, 131072, 1, 262153, 131072, 1, 327689, 131072, 2, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 786441, 65536, 0, 851977, 65536, 1, 917513, 65536, 1, 917514, 131072, 1, 851978, 131072, 1, 786442, 131072, 0, 720906, 1, 0, 655370, 1, 0, 589834, 1, 0, 524298, 1, 0, 458762, 1, 0, 393226, 1, 0, 327690, 131072, 2, 262154, 131072, 1, 196618, 131072, 1, 131082, 131072, 1, 131083, 131072, 1, 196619, 131072, 1, 262155, 131072, 1, 327691, 131072, 2, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 786443, 131072, 0, 851979, 131072, 1, 917515, 131072, 1, 917516, 131072, 1, 851980, 131072, 1, 786444, 131072, 0, 720908, 1, 0, 655372, 1, 0, 589836, 1, 0, 524300, 1, 0, 458764, 1, 0, 393228, 1, 0, 327692, 131072, 2, 262156, 131072, 1, 196620, 131072, 1, 131084, 131072, 1, 65548, 131072, 0, 131085, 131072, 1, 196621, 131072, 1, 262157, 131072, 1, 327693, 131072, 2, 393229, 1, 0, 458765, 1, 0, 524301, 1, 0, 589837, 1, 0, 655373, 1, 0, 720909, 1, 0, 786445, 131072, 0, 851981, 131072, 1, 917517, 131072, 1, 917518, 131072, 1, 851982, 131072, 1, 786446, 131072, 0, 720910, 1, 0, 655374, 1, 0, 589838, 1, 0, 524302, 1, 0, 458766, 1, 0, 393230, 1, 0, 327694, 131072, 2, 262158, 131072, 1, 196622, 131072, 1, 131086, 131072, 1, 851983, 131072, 1, 917519, 131072, 1, 851984, 131072, 1, 786448, 327680, 1, 720912, 65536, 1, 655376, 65536, 1, 589840, 65536, 1, 524304, 65536, 1, 458768, 65536, 1, 393232, 65536, 1, 327696, 327680, 0, 262160, 131072, 1, 196624, 131072, 1, 131088, 131072, 1, 65552, 131072, 0, 131089, 131072, 1, 196625, 131072, 1, 262161, 131072, 1, 327697, 131072, 1, 393233, 131072, 1, 458769, 131072, 1, 524305, 131072, 1, 589841, 131072, 1, 655377, 131072, 1, 720913, 131072, 1, 786449, 131072, 1, 851985, 131072, 1, 917521, 131072, 1, 786452, 131072, 1, 720916, 131072, 1, 655380, 131072, 1, 589844, 131072, 1, 524308, 131072, 1, 458772, 131072, 1, 393236, 131072, 1, 327700, 131072, 1, 262164, 131072, 1, 196628, 131072, 1, 131092, 131072, 1, 65556, 131072, 0, 20, 1, 0, 21, 1, 0, 65557, 196608, 0, 131093, 196608, 1, 196629, 196608, 1, 262165, 196608, 1, 327701, 196608, 1, 393237, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 655381, 196608, 1, 720917, 196608, 1, 786453, 196608, 1, 851989, 196608, 1, 851988, 131072, 1, 917524, 131072, 1, 983060, 131072, 1, 1048596, 131072, 2, 1048597, 196608, 2, 983061, 196608, 1, 917525, 196608, 1, 917526, 1, 0, 851990, 1, 0, 786454, 1, 0, 720918, 1, 0, 655382, 1, 0, 589846, 1, 0, 524310, 1, 0, 458774, 1, 0, 393238, 1, 0, 327702, 1, 0, 262166, 1, 0, 196630, 1, 0, 131094, 1, 0, 65558, 1, 0, 22, 1, 0, 23, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 1, 0, 327703, 1, 0, 393239, 1, 0, 458775, 1, 0, 524311, 1, 0, 589847, 1, 0, 655383, 1, 0, 720919, 1, 0, 786455, 1, 0, 851991, 1, 0, 917527, 1, 0, 983063, 1, 0, 983062, 1, 0, 1048598, 1, 0, 1048599, 1, 0)
layer_2/tile_data = PackedInt32Array(851991, 2, 5, 393239, 2, 5, 851975, 196608, 5, 786439, 196608, 5, 720903, 196608, 5, 655368, 131072, 6, 655369, 131072, 6, 655370, 131072, 6, 655371, 131072, 6, 655372, 131072, 6, 655373, 131072, 6, 589838, 196608, 5, 524302, 196608, 5, 458766, 196608, 4, 458765, 131072, 4, 458764, 131072, 4, 458763, 131072, 4, 458762, 131072, 4, 458761, 131072, 4, 458760, 131072, 4, 458759, 131072, 4, 458758, 131072, 4, 458757, 131072, 4, 458756, 131072, 4, 458755, 65536, 4, 524291, 65536, 5, 589827, 65536, 5, 655363, 65536, 5, 720899, 65536, 5, 786435, 65536, 5, 851971, 65536, 5, 917507, 65536, 6, 917508, 131072, 6, 917509, 131072, 6, 917510, 131072, 6, 917511, 196608, 6, 851974, 131072, 5, 851973, 131072, 5, 851972, 131072, 5, 786436, 131072, 5, 720900, 131072, 5, 655364, 131072, 5, 589828, 131072, 5, 524292, 131072, 5, 524293, 131072, 5, 524294, 131072, 5, 524295, 131072, 5, 524296, 131072, 5, 524297, 131072, 5, 524298, 131072, 5, 524299, 131072, 5, 524300, 131072, 5, 589836, 131072, 5, 589837, 131072, 5, 524301, 131072, 5, 589835, 131072, 5, 589834, 131072, 5, 589833, 131072, 5, 589832, 131072, 5, 589831, 131072, 5, 589830, 131072, 5, 655366, 131072, 5, 655365, 131072, 5, 720901, 131072, 5, 786437, 131072, 5, 786438, 131072, 5, 589829, 131072, 5, 720902, 131072, 5, 655367, 262144, 4, 655374, 196608, 6)

[node name="Player" parent="." instance=ExtResource("3_d3m2k")]
position = Vector2(191, 227)

[node name="Goblin" parent="." instance=ExtResource("4_uompy")]
position = Vector2(300, 152)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1, -4, 401, -2, 402, 290, 250.87, 289.624, 250, 301, 153, 299, 150, 289, 0, 289, -1, -3, -52, -36, -115, 5, -72, 368, 488, 387, 504, -66, 164, -69, 6, -77, -38, -47)

[node name="ChestArea" type="Area2D" parent="."]

[node name="chest_area" type="CollisionShape2D" parent="ChestArea"]
position = Vector2(41, 53)
shape = SubResource("CircleShape2D_ypm6b")

[node name="chest" type="AnimatedSprite2D" parent="."]
position = Vector2(41, 53)
rotation = -1.56602
sprite_frames = SubResource("SpriteFrames_gh6q8")

[node name="Boots" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(531, 52)
scale = Vector2(0.195312, 0.148437)
sprite_frames = SubResource("SpriteFrames_dwfpm")
metadata/_edit_group_ = true

[node name="BootPickup" type="Area2D" parent="Boots"]

[node name="bootpickup" type="CollisionShape2D" parent="Boots/BootPickup"]
position = Vector2(1.2799, 1.68421)
shape = SubResource("CircleShape2D_shgqb")

[node name="level_4_transitiion" type="Area2D" parent="."]

[node name="level4transition" type="CollisionShape2D" parent="level_4_transitiion"]
position = Vector2(201.25, 300)
shape = SubResource("RectangleShape2D_obeey")

[node name="Hud" parent="." instance=ExtResource("7_6brys")]

[node name="Goblin2" parent="." instance=ExtResource("4_uompy")]
position = Vector2(206, 53)

[node name="Goblin3" parent="." instance=ExtResource("4_uompy")]
position = Vector2(25, 167)

[node name="ChestCollision" type="StaticBody2D" parent="."]

[node name="chestcollision" type="CollisionShape2D" parent="ChestCollision"]
position = Vector2(41, 53)
shape = SubResource("RectangleShape2D_4v4pi")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 18.0
offset_top = 61.0
offset_right = 101.0
offset_bottom = 84.0
text = "+ 20  Speed"

[connection signal="body_entered" from="ChestArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ChestArea" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="chest" to="." method="_on_chest_animation_finished"]
[connection signal="body_entered" from="Boots/BootPickup" to="." method="_on_boot_pickup_body_entered"]
[connection signal="body_entered" from="level_4_transitiion" to="." method="_on_level_4_transitiion_body_entered"]
